--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   cupertino_icons: ^1.0.6
+  shared_preferences: ^2.3.3 
 
 dev_dependencies:
   flutter_test:
@@ -22,6 +23,7 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   build_runner: ^2.1.5  # Required for code generation
   hive_generator: ^1.1.1  # Required to generate adapter code for Hive
+  
 
 flutter:
   uses-material-design: true
